fix: document forbidden status code for wrong origins
